--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,14 @@ services:
     networks:
       - safeway-test
 
+  usuarios:
+    build: 
+      context: .
+      dockerfile: dockerfile-users
+    container_name: usuarios
+    networks:
+      - safeway-test
+
   postgresql14:
     image: postgres:14
     container_name: postgres14-safeway-eventos
