--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,16 @@ services:
     networks:
       - safeway-test
 
+  monitor:
+    build:
+      context: .
+      dockerfile: dockerfile-monitor
+    container_name: monitor
+    ports:
+      - "8081:8081"
+    networks:
+      - safeway-test
+
   eventos:
     build:
       context: .
